2001-03-11  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* data/(magic)gorget.shp: paperdoll art for gorget & magic gorget, created by Adam Delman. (Thanks!)
	* data/flx.in, gunps/Paperdoll_gump_info.cc: include new art
	* data/credits.txt: credit where credit is due

2001-03-11  Max Horn  <max@quendi.de>
	* docs/interview: added a lot of babble there ;) you all should ;)
	* actions.cc: added missing using directive
	* keys.cc: added missing using directive
	* files/utils.cc: added missing using directive
	* audio/midi_drivers/mac_midi.cc: removed some warnings (this file
	  is not doing anything)
	* audio/Audio.cc: fixed compilation error on MacOS (Metrowerks does
	  ANSI compliant type checking unlike gcc <g>)

2001-03-10  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* audio/Midi.h/cc: fixed no-midi-device-found bug
	* shp2pcx.cc: output origin
	* defaultkeys.txt: re-added change_skin
	* tools/.cvsignore: added shp2pcx, removed u7shp
	* fnames.h, gamedat.cc: changed savegame names to exultXXbg/si.sav
	* gamedat.cc, files/utils.cc: fixed gamedat creation

2001-03-10  Jeff Freedman  <jeff@amy.nerble.net>

	* Usecode: Fixed gollem in Test-of-Love.
	* npcnear.cc: Monster in 'wait' schedule shouldn't attack.  Fixes
	problem with 1st mage in Test of Courage.
	* Audio:  For Win32, changed desired sample rate from 44100 to
	22050.   This stops (at least on my machine) the freeze upon exit.

2001-03-10  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* tools/shp2pcx.cc: convert shp+pal to a .pcx for each frame
	* tools/Makefile.am: build shp2pcx

2001-03-09  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* configure.in, compiler/Makefile.am: added --disable-compiler switch

2001-03-08  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* menulist.cc: disable sound-related options in setup when no MIDI
	* Audio.cc: write config/audio/enabled setting to file when not present
	* pcb.h, Timidity_binary.cc: fixed part of broken timidity driver
